# ros_little_round

./: .gitignore  .gitmodules  frames_2025-12-15_17.03.41.gv
src/bringup/: package.xml  setup.py
src/bringup/bringup/: odom_to_tf.py
src/bringup/config/: slam_toolbox.yaml
src/bringup/launch/: all.launch.py
src/chassis_keyboard_teleop/: CMakeLists.txt  package.xml
src/chassis_keyboard_teleop/include/chassis_keyboard_teleop/: teleop.hpp
src/chassis_keyboard_teleop/launch/: launch.py
src/chassis_keyboard_teleop/src/: teleop.cpp  teleop_node.cpp
src/little_chassis/: CMakeLists.txt  package.xml
src/little_chassis/include/little_chassis/: little_chassis_node.hpp  ros_messages.h  udp_messages.hpp
src/little_chassis/include/little_chassis/params_transfer/: parameter_transfer.hpp
src/little_chassis/include/little_chassis/services/: io_control_service.hpp  light_control_service.hpp  motion_control_service.hpp  service_server_base.hpp
src/little_chassis/include/little_chassis/topics/: chassis_state_publisher.hpp  cmd_vel_subscriber.hpp  odom_publisher.hpp  topic_publisher_base.hpp  topic_subscriber_base.hpp
src/little_chassis/launch/: little_chassis.launch.py
src/little_chassis/msg/: Battery.msg  ChassisState.msg  IoState.msg  Light.msg  Motion.msg
src/little_chassis/params/: chassis.yaml
src/little_chassis/src/: little_chassis_node.cpp  main.cpp
src/little_chassis/src/params_transfer/: parameter_transfer.cpp
src/little_chassis/src/services/: io_control_service.cpp  light_control_service.cpp  motion_control_service.cpp
src/little_chassis/src/topics/: chassis_state_publisher.cpp  cmd_vel_subscriber.cpp  odom_publisher.cpp
src/little_chassis/srv/: IoControl.srv  LightControl.srv  MotionControl.srv
