<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.1</version>
  <description>Bringup launch files for little round robot (lidar + chassis + slam_toolbox).</description>
  <maintainer email="justdoublecats@gmail.com">young</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>little_chassis</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
